--- a/caixa01.html
+++ b/caixa01.html
@@ -22,13 +22,17 @@
             height: 100px;
 
             padding: 50px;
-            border: 10px double rgb(25, 187, 199);
+            border: 10px double rgb(52, 154, 161);
             margin: 100px auto;
+        }
 
-            
-
+        a{
+           padding: 20px;
+           background-color: rgb(197, 32, 32); 
 
         }
+
+
     </style>
 
 </head>
@@ -41,6 +45,10 @@
     <div>
         Conteudo 2
     </div>
+
+    <a href="#">link1</a> <br></br>
+    <a href="#">link2</a> 
+
 
 </body>
 
