--- a/tagssemante.html
+++ b/tagssemante.html
@@ -4,11 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tags Semanticas</title>
+
+    <style>
+        body{
+            background-color: rgb(160, 159, 159);
+        }
+
+        header{
+            background-color: white;
+            height: 150px; 
+            padding: 20px;
+        }
+
+        header > nav{
+            background-color: rgb(160, 160, 160);
+            padding: 5px;
+
+            font-size: 20px;
+            color: white;
+
+            box-shadow: rgb(129, 129, 129) 10px 10px 8px;
+        }
+
+        main{
+            background-color: white;
+            margin-top: 20px;
+            padding: 10px;
+            border-radius: 25px 25px;
+        }
+
+        article{
+            background-color: rgb(238, 238, 238);
+            padding: 5px;
+            margin-top: 20px;
+        }
+
+        article > h2{
+            background-color: rgb(160, 159, 159);
+            box-shadow: rgb(129, 129, 129) 5px 5px 7px;
+                    
+        }
+
+        footer{
+            background-color: rgb(46, 46, 46);
+            margin-top: 20px;
+            padding: 1px;
+            text-align: center;
+            color: white;
+        }
+
+
+
+
+    </style>
+
+
 </head>
 <body>
 
-
     <header>
+        <h1> Meu Site</h1>
         <nav>link1 link2 link3 ... </nav>
     </header>
     
@@ -19,21 +74,20 @@
             <h2>Titulo</h2>
             <p>Texto do artigo</p>
         </article>
+
         <article>
             <h2>Titulo</h2>
             <p>Texto do artigo</p>
             <aside>Conteudo periferico do artigo</aside>
         </article>
-    </section>
-    <aside>Conteudo periferico do site</aside>
+        </section>
+        <aside>Conteudo periferico do site</aside>
     </main>
 
 
     <footer>
-
+        <p>Desenvolvido por M7</p>
     </footer>
-
-
 
 </body>
 </html>
