--- a/texto02.html
+++ b/texto02.html
@@ -10,20 +10,25 @@
             background-image: linear-gradient(#786db6, #df9292);
         }
 
+        div{
+
+        }
+
         #div1{
             width: 400px;
             justify-items: center;
             margin: auto;
         }
 
-       #div2{
+        #div2{
             width: 400px;
             justify-items: center;
             margin: auto;
        }
 
-       p{
-        
+        p{
+            text-align: justify;
+            
 
        }
 
