--- a/midias/midia01.html
+++ b/midias/midia01.html
@@ -7,8 +7,19 @@
     <title>Midias HTML</title>
 </head>
 <body>
-    
-    <img src="img/1998.jpg" alt="1998">
+    <picture>
+
+        <source media="(max-width: 500px)" srcset="img/
+        1998(300).jpg" type="image/jpg" >
+        <source media="(max-width: 800px)" srcset="img/
+        1998(700).jpg" type="image/jpg" >
+        <source media="(max-width: 1050px)" srcset="img/
+        1998(1000).jpg" type="image/jpg" >
+        
+        <img src="img/1998.jpg" alt="paisagem">
+   
+    </picture>
+ 
 
 </body>
 </html>
